--- a/index.html
+++ b/index.html
@@ -49,10 +49,28 @@
 
   const pw = document.querySelector('#password');
   const display = document.querySelector('#display');
-  const meter = PasswordStrengthMeter.attach(pw, {target: display})
 
-  meter.on('validation-changed', isValid => {
-    console.log('validation state', isValid);
+
+  const complexityRules = [
+    {
+      rule: input => !/\s/.test(input),
+      description: 'Contains no spaces'
+    },
+    {
+      rule: input => input.length > 5 && input.length < 61,
+      description: 'Is between 6 and 60 characters'
+    }
+  ]
+
+  const options = {
+    target: display,
+    complexityRules
+  }
+
+  const meter = PasswordStrengthMeter.attach(pw, options)
+
+  meter.on('validation-state', stateObj => {
+    console.log('validation state', stateObj);
   })
 </script>
 </html>
