demonstrate babelified script

--- a/index.html
+++ b/index.html
@@ -44,33 +44,5 @@
 </body>
 
 <script src="../dist/index.bundle.js"></script>
-<script>
-  'use strict';
-
-  const pw = document.querySelector('#password');
-  const display = document.querySelector('#display');
-
-
-  const complexityRules = [
-    {
-      rule: input => !/\s/.test(input),
-      description: 'Contains no spaces'
-    },
-    {
-      rule: input => input.length > 5 && input.length < 61,
-      description: 'Is between 6 and 60 characters'
-    }
-  ]
-
-  const options = {
-    target: display,
-    complexityRules
-  }
-
-  const meter = PasswordStrengthMeter.attach(pw, options)
-
-  meter.on('validation-state', stateObj => {
-    console.log('validation state', stateObj);
-  })
-</script>
+<script src="../dist/integration.bundle.js"></script>
 </html>
