--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   }
 
   .content > div {
-    margin: 0 0.5em;
+    margin: 0.5em;
     /*width: 100px;*/
   }
 
@@ -33,8 +33,9 @@
   }
 
   #display {
-    height: 20px;
-    width: 100px;
+    height: 5px;
+    width: 100%;
+    opacity: 0.7;
   }
 
   </style>
@@ -44,17 +45,18 @@
   <div class="container">
     <div class="content">
       <div class="label">test password</div>
-      <div class="password">
-        <input type="password" id="password">
+      <div class="column">
+        <div class="password">
+          <input type="password" id="password">
+        </div>
+        <div id="display"></div>
       </div>
-      <div id="display"></div>
     </div>
     <div class="content">
       <div class="label">confirm</div>
       <div class="password">
         <input type="password" id="confirm-password">
       </div>
-      <div style="width: 100px;"></div>
     </div>
   </div>
 </body>
