playing with display

--- a/index.html
+++ b/index.html
@@ -35,7 +35,11 @@
   #display {
     height: 5px;
     width: 100%;
-    opacity: 0.7;
+    opacity: 0.75;
+  }
+
+  input:focus {
+    outline: none;
   }
 
   </style>
