make score configurable and supply additional information in return obj

--- a/index.html
+++ b/index.html
@@ -67,4 +67,10 @@
 
 <script src="../dist/index.bundle.js"></script>
 <script src="../dist/integration.bundle.js"></script>
+
+<script>
+  'use strict';
+
+
+</script>
 </html>
